Multiple improvs to iOS version. Fixed couple bugs. Back button does not go to splash screen on android now.

--- a/PhantasmaMail/PhantasmaMail.iOS/PhantasmaMail.iOS.csproj
+++ b/PhantasmaMail/PhantasmaMail.iOS/PhantasmaMail.iOS.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Renderers\CustomNavigationRenderer.cs" />
+    <Compile Include="Renderers\CustomPageRenderer.cs" />
     <Compile Include="Renderers\ExpandableEditorRenderer.cs" />
     <Compile Include="Services\iOSSQLService.cs" />
     <None Include="Entitlements.plist" />
